add some game rules

--- a/compose.yml
+++ b/compose.yml
@@ -33,6 +33,10 @@ services:
       DIFFICULTY: "hard"
       LEVEL: "word-data"
       ENABLE_WHITELIST: "true"
+      RCON_CMDS_STARTUP:  |-
+        gamerule mobGriefing false
+      RCON_CMDS_ON_CONNECT:  |-
+        effect @a haste 100000 3 true
 
     volumes:
       - ./data:/data
