--- a/compose.yml
+++ b/compose.yml
@@ -30,6 +30,7 @@ services:
       MAX_PLAYERS: "10"
       MAX_MEMORY: "8G"
       VIEW_DISTANCE: "8"
+      USE_AIKAR_FLAGS: "true"
 
       # game preference
       CF_MODPACK_ZIP: /profile.zip
