--- a/compose.yml
+++ b/compose.yml
@@ -31,6 +31,9 @@ services:
       MAX_MEMORY: "10G"
       VIEW_DISTANCE: "14"
       USE_AIKAR_FLAGS: "true"
+      # 10 minutes. required due to weak server + recurrent complex startup
+      # it's fine after that though.
+      MAX_TICK_TIME: "600000"
 
       # game preference
       CF_MODPACK_ZIP: /profile.zip
